docker setup completed